# design-patterns-with-python

./: .gitmodules  .nojekyll  .pre-commit-config.yaml  README.md  _quarto.yml  index.html  index.md  index.qmd  pyproject.toml  search.json
I-introduction/chapter-01/: chapter-01.html  chapter-01.ipynb  chapter-01.md  chapter-01.qmd
I-introduction/chapter-02/: chapter-02.html  chapter-02.ipynb  chapter-02.md  chapter-02.qmd
I-introduction/chapter-03/: chapter-03.html  chapter-03.ipynb  chapter-03.md  chapter-03.qmd
I-introduction/chapter-04/: chapter-04.html  chapter-04.md  chapter-04.qmd
I-introduction/chapter-1/: chapter-1.qmd
II-Creational-Patterns/: ii-creational-patterns.html  ii-creational-patterns.md  ii-creational-patterns.qmd
II-Creational-Patterns/chapter-05/: chapter-05.html  chapter-05.md  chapter-05.qmd
II-Creational-Patterns/chapter-06/: chapter-06.html  chapter-06.md  chapter-06.qmd
II-Creational-Patterns/chapter-07/: chapter-07.html  chapter-07.md  chapter-07.qmd
II-Creational-Patterns/chapter-08/: chapter-08.html  chapter-08.md  chapter-08.qmd
II-Creational-Patterns/chapter-09/: chapter-09.html  chapter-09.md  chapter-09.qmd
II-Creational-Patterns/chapter-10/: chapter-10.html  chapter-10.md  chapter-10.qmd
III-Structural-Patterns/: iii-structural-patterns.html  iii-structural-patterns.md  iii-structural-patterns.qmd
III-Structural-Patterns/chapter-12/: chapter-12.md  chapter-12.qmd
III-Structural-Patterns/chapter-13/: chapter-13.md  chapter-13.qmd
III-Structural-Patterns/chapter-14/: chapter-14.md  chapter-14.qmd
(+241 files in other folders)
