[project]
name = "design-patterns-with-python"
version = "0.1.0"
description = "A collection of notes and exercises to the book Python Programming with Design Patterns by James W Cooper"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pre-commit>=4.6.0",
    "pre-commit-uv>=4.2.2",
    "quarto-cli>=1.9.38",
    "ruff>=0.15.19",
    "ty>=0.0.53",
]

[tool.ruff]
extend-exclude = ["jameswcooper"]

[tool.ty.src]
exclude = ["jameswcooper"]
